# rootlight

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
apps/rootlight/: Cargo.toml
apps/rootlight-adapter-host/: Cargo.toml
apps/rootlight-adapter-host/src/: lib.rs  main.rs
apps/rootlight-daemon/: Cargo.toml
apps/rootlight-daemon/src/: first_slice.rs  main.rs
apps/rootlight-mcp/: Cargo.toml
apps/rootlight-mcp/src/: advanced.rs  batch.rs  client_port.rs  context_pack.rs  executor.rs  fallback.rs  json.rs  lib.rs  main.rs  tests.rs  tools.rs
apps/rootlight-mcp/src/client_port/: tests.rs
apps/rootlight-mcp/src/executor/: tests.rs
apps/rootlight-mcp/tests/: stdio_process.rs  tool_transcript.rs
apps/rootlight/src/: main.rs
apps/rootlight/tests/: first_slice_demo.rs
crates/rootlight-adapter-sdk/: Cargo.toml
crates/rootlight-adapter-sdk/src/: descriptor.rs  error.rs  ir_accounting.rs  lib.rs  limits.rs  report.rs  request.rs  sink.rs  testkit.rs
crates/rootlight-adapter-sdk/tests/: sdk_contract.rs
crates/rootlight-adapter-treesitter/: Cargo.toml
crates/rootlight-adapter-treesitter/queries/: go.scm  java.scm  javascript.scm  python.scm  rust.scm  typescript.scm
crates/rootlight-adapter-treesitter/src/: config.rs  incremental.rs  lib.rs  lowering.rs  pool.rs  query_pack.rs  registry.rs  runtime.rs
crates/rootlight-adapter-treesitter/tests/: analyzer_e2e.rs  fuzz_parser.rs  lowering_contract.rs  runtime_contract.rs  structural_extraction.rs
crates/rootlight-adapter-treesitter/tests/fixtures/structural/: go.go  java.java  javascript.js  python.py  rust.rs  typescript.ts
crates/rootlight-adapters/: Cargo.toml
crates/rootlight-adapters/src/: lib.rs
crates/rootlight-adapters/tests/: context_import.rs
crates/rootlight-agent/: Cargo.toml
crates/rootlight-agent/src/: advanced.rs  batch.rs  context_pack.rs  explain.rs  lib.rs
crates/rootlight-agent/tests/: explain_golden.rs
crates/rootlight-bench/: Cargo.toml  build.rs
crates/rootlight-bench/src/: bundle.rs  ci.rs  decode.rs  integrity.rs  lib.rs  m09.rs  model.rs  parser.rs  sampler.rs  semantic_contract.rs
crates/rootlight-cancel/: Cargo.toml
crates/rootlight-cancel/src/: lib.rs
crates/rootlight-catalog/: Cargo.toml
crates/rootlight-catalog/src/: codec.rs  indexed_read.rs  lib.rs  oracle_roundtrip_tests.rs  read.rs  schema.rs  write.rs
crates/rootlight-catalog/tests/: ephemeral_oracle.rs  fail_closed.rs  oracle_roundtrip.rs
crates/rootlight-client/: Cargo.toml
crates/rootlight-client/src/: lib.rs
crates/rootlight-config/: Cargo.toml
crates/rootlight-config/src/: lib.rs
crates/rootlight-daemon-core/: Cargo.toml
crates/rootlight-daemon-core/src/: lib.rs
crates/rootlight-discovery/: Cargo.toml
crates/rootlight-discovery/src/: incremental.rs  lib.rs
crates/rootlight-discovery/tests/: incremental.rs
crates/rootlight-error/: Cargo.toml
crates/rootlight-error/src/: lib.rs
crates/rootlight-git/: Cargo.toml
crates/rootlight-git/src/: collect.rs  lib.rs  model.rs  normalize.rs
crates/rootlight-git/tests/: collector.rs  contract.rs
crates/rootlight-ids/: Cargo.toml
crates/rootlight-ids/src/: lib.rs
crates/rootlight-incremental/: Cargo.toml
crates/rootlight-incremental/src/: dependency.rs  equivalence.rs  error.rs  lib.rs  model.rs  plan.rs  reconcile.rs
crates/rootlight-incremental/tests/: contracts.rs
crates/rootlight-ipc/: Cargo.toml
crates/rootlight-ipc/src/: lib.rs
crates/rootlight-ir/: Cargo.toml
crates/rootlight-ir/src/: identity.rs  lexical.rs  lib.rs  normalized.rs  validation.rs
crates/rootlight-mcp-contract/: Cargo.toml
crates/rootlight-mcp-contract/src/: accounting.rs  capability.rs  catalog.rs  change.rs  context.rs  intent.rs  lib.rs  pagination.rs  repository.rs  vertical.rs
crates/rootlight-observability/: Cargo.toml
crates/rootlight-observability/src/: lib.rs
crates/rootlight-operations/: Cargo.toml
crates/rootlight-operations/src/: lib.rs
crates/rootlight-protocol/: Cargo.toml
crates/rootlight-protocol/src/: adapter_contract.rs  lib.rs
crates/rootlight-query/: Cargo.toml
crates/rootlight-query/src/: lib.rs  model.rs  projection.rs  service.rs  store.rs
crates/rootlight-query/tests/: query_slice.rs
crates/rootlight-resolve/: Cargo.toml
crates/rootlight-resolve/src/: application.rs  engine.rs  foreign.rs  lib.rs  model.rs  quality.rs
crates/rootlight-resolve/tests/: scope_resolution.rs
crates/rootlight-runtime/: Cargo.toml
crates/rootlight-runtime/src/: lib.rs
crates/rootlight-search/: Cargo.toml
crates/rootlight-search/src/: artifact.rs  index.rs  lib.rs  model.rs  tokenizer.rs
crates/rootlight-search/tests/: fail_closed.rs
crates/rootlight-segment/: Cargo.toml
crates/rootlight-segment/src/: format.rs  lib.rs  reader.rs
crates/rootlight-segment/tests/: differential.rs
crates/rootlight-service/: Cargo.toml
crates/rootlight-service/src/: lib.rs
crates/rootlight-service/tests/: vertical_slice.rs
crates/rootlight-source/: Cargo.toml
crates/rootlight-source/src/: lib.rs
crates/rootlight-storage/: Cargo.toml
crates/rootlight-vfs/: Cargo.toml
policy/: architecture.toml  github-actions.toml  supply-chain.toml  toolchain.toml  unsafe.toml
policy/adr/: ADR-026-macos-acl-ffi-plan.md  ADR-026-private-handle-tree-boundary.md  ADR-027-generation-identity-proofs.md  README.md
proto/: adapter_v1.proto  common.proto  daemon_v1.proto
scripts/: download-osv-database.sh  download-rustsec-database.sh  generate-sbom.sh  install-policy-tools.sh  policy-negative-controls.sh  prepare-offline.sh  run-geiger.sh  run-in-network-namespace.sh  run-offline-tests.sh  test-validate-geiger.py  validate-geiger.py
tests/fixtures/: id-vectors.json
xtask/: Cargo.toml
xtask/src/: architecture.rs  capability.rs  daemon_lifecycle.rs  disposition.rs  git_metadata.rs  grammar_lock.rs  ids.rs  license.rs  main.rs  mcp_vertical.rs  policy.rs  protobuf_compatibility.rs  schemas.rs  source_hygiene.rs
(+54 files in other folders)
