[workspace]
members = ["xtask"]
exclude = ["tests/fixtures/architecture/forbidden-edge"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/tomasmarekk/rootlight"

[workspace.dependencies]
cargo_metadata = { version = "0.23.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
toml = { version = "1.1.3", default-features = false, features = ["parse", "serde", "std"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
