[workspace]
members = [
    "crates/rootlight-cancel",
    "crates/rootlight-config",
    "crates/rootlight-error",
    "crates/rootlight-ids",
    "crates/rootlight-ir",
    "crates/rootlight-mcp-contract",
    "crates/rootlight-protocol",
    "xtask",
]
exclude = ["tests/fixtures/architecture/forbidden-edge"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/tomasmarekk/rootlight"

[workspace.dependencies]
blake3 = { version = "1.8.5", default-features = false, features = ["pure", "std"] }
cargo_metadata = { version = "0.23.1", default-features = false }
data-encoding = { version = "2.9.0", default-features = false, features = ["std"] }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive", "std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
toml = { version = "1.1.3", default-features = false, features = ["parse", "serde", "std"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
