[workspace]
members = [
    "apps/rootlight",
    "apps/rootlight-daemon",
    "crates/rootlight-adapter-sdk",
    "crates/rootlight-adapter-treesitter",
    "crates/rootlight-bench",
    "crates/rootlight-cancel",
    "crates/rootlight-client",
    "crates/rootlight-config",
    "crates/rootlight-daemon-core",
    "crates/rootlight-error",
    "crates/rootlight-ids",
    "crates/rootlight-ipc",
    "crates/rootlight-ir",
    "crates/rootlight-discovery",
    "crates/rootlight-mcp-contract",
    "crates/rootlight-observability",
    "crates/rootlight-operations",
    "crates/rootlight-protocol",
    "crates/rootlight-runtime",
    "crates/rootlight-storage",
    "crates/rootlight-vfs",
    "xtask",
]
exclude = ["tests/fixtures/architecture/forbidden-edge"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/tomasmarekk/rootlight"

[workspace.dependencies]
blake3 = { version = "1.8.5", default-features = false, features = ["pure", "std"] }
cap-fs-ext = { version = "3.4.5", default-features = false, features = ["std"] }
cap-std = { version = "3.4.5", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
data-encoding = { version = "2.9.0", default-features = false, features = ["std"] }
directories = { version = "6.0.0", default-features = false }
getrandom = { version = "0.3.4", default-features = false }
ignore = { version = "0.4.29", default-features = false }
interprocess = { version = "=2.2.3", default-features = false, features = ["tokio"] }
jsonschema = { version = "0.47.0", default-features = false }
nix = { version = "0.31.3", default-features = false, features = ["fs", "socket", "user"] }
nt-token = { version = "=0.5.0", default-features = false }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
prost = { version = "0.14.4", default-features = false, features = ["derive", "std"] }
prost-build = { version = "0.14.4", default-features = false, features = ["format"] }
prost-types = { version = "0.14.4", default-features = false, features = ["std"] }
protoc-bin-vendored = { version = "3.2.0", default-features = false }
rusqlite = { version = "=0.39.0", default-features = false, features = ["bundled", "column_decltype", "hooks", "modern_sqlite"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive", "std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
sha2 = { version = "0.11.0", default-features = false }
tempfile = "3.23.0"
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
tree-sitter = { version = "=0.26.11", default-features = false, features = ["std"] }
tree-sitter-java = { version = "=0.23.5", default-features = false }
tree-sitter-javascript = { version = "=0.25.0", default-features = false }
tree-sitter-python = { version = "=0.25.0", default-features = false }
tree-sitter-rust = { version = "=0.24.2", default-features = false }
tokio = { version = "=1.48.0", default-features = false, features = ["io-std", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = { version = "1.1.3", default-features = false, features = ["parse", "serde", "std"] }
widestring = { version = "1.2.1", default-features = false, features = ["std"] }
windows = { version = "=0.61.3", default-features = false, features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
windows-permissions = { version = "=0.2.4", default-features = false }
yaml-rust2 = { version = "0.10.4", default-features = false }
zip = { version = "=2.4.2", default-features = false }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
