[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
blake3.workspace = true
cargo_metadata.workspace = true
jsonschema.workspace = true
prost.workspace = true
prost-build.workspace = true
prost-types.workspace = true
protoc-bin-vendored.workspace = true
rootlight-client = { path = "../crates/rootlight-client" }
rootlight-config = { path = "../crates/rootlight-config", features = ["schema"] }
rootlight-error = { path = "../crates/rootlight-error", features = ["schema"] }
rootlight-ids = { path = "../crates/rootlight-ids", features = ["schema"] }
rootlight-ipc = { path = "../crates/rootlight-ipc" }
rootlight-ir = { path = "../crates/rootlight-ir", features = ["schema"] }
rootlight-mcp-contract = { path = "../crates/rootlight-mcp-contract" }
rootlight-runtime = { path = "../crates/rootlight-runtime" }
rootlight-protocol = { path = "../crates/rootlight-protocol" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
yaml-rust2.workspace = true

[lints]
workspace = true
