[package]
name = "rootlight-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
blake3.workspace = true
getrandom.workspace = true
jsonschema.workspace = true
rootlight-client = { path = "../../crates/rootlight-client" }
rootlight-error = { path = "../../crates/rootlight-error" }
rootlight-ids = { path = "../../crates/rootlight-ids" }
rootlight-ir = { path = "../../crates/rootlight-ir" }
rootlight-mcp-contract = { path = "../../crates/rootlight-mcp-contract" }
rootlight-runtime = { path = "../../crates/rootlight-runtime" }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
