[package]
name = "rootlight"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
getrandom.workspace = true
rootlight-client = { path = "../../crates/rootlight-client" }
rootlight-daemon-core = { path = "../../crates/rootlight-daemon-core" }
rootlight-error = { path = "../../crates/rootlight-error" }
rootlight-ids = { path = "../../crates/rootlight-ids" }
rootlight-ipc = { path = "../../crates/rootlight-ipc" }
rootlight-operations = { path = "../../crates/rootlight-operations" }
rootlight-protocol = { path = "../../crates/rootlight-protocol" }
rootlight-runtime = { path = "../../crates/rootlight-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
