[package]
name = "rootlight-adapter-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ir = { path = "../rootlight-ir" }
rootlight-vfs = { path = "../rootlight-vfs" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
