[package]
name = "rootlight-adapter-treesitter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
blake3.workspace = true
rootlight-adapter-sdk = { path = "../rootlight-adapter-sdk" }
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
proptest.workspace = true
rootlight-vfs = { path = "../rootlight-vfs" }
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
