[package]
name = "rootlight-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rootlight-mcp-contract = { path = "../rootlight-mcp-contract" }
thiserror.workspace = true
blake3.workspace = true

[lints]
workspace = true
