[package]
name = "rootlight-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
cap-fs-ext.workspace = true
cap-std.workspace = true
getrandom = { workspace = true, features = ["std"] }
rootlight-adapter-sdk = { path = "../rootlight-adapter-sdk" }
rootlight-adapter-treesitter = { path = "../rootlight-adapter-treesitter" }
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
rootlight-vfs = { path = "../rootlight-vfs" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "android", target_vendor = "apple"))'.dependencies]
rustix = { workspace = true, features = ["fs"] }

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
nt-token.workspace = true
renamore.workspace = true
windows.workspace = true
windows-permissions.workspace = true
winapi-util.workspace = true

[lints]
workspace = true
