[package]
name = "rootlight-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
cap-fs-ext.workspace = true
cap-std.workspace = true
rootlight-adapter-sdk = { path = "../rootlight-adapter-sdk" }
rootlight-adapter-treesitter = { path = "../rootlight-adapter-treesitter" }
rootlight-adapters = { path = "../rootlight-adapters" }
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
rootlight-resolve = { path = "../rootlight-resolve" }
rootlight-vfs = { path = "../rootlight-vfs" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
winapi-util.workspace = true

[lints]
workspace = true
