[package]
name = "rootlight-catalog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
rootlight-storage = { path = "../rootlight-storage" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rootlight-cancel = { path = "../rootlight-cancel" }
tempfile.workspace = true

[lints]
workspace = true
