[package]
name = "rootlight-catalog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
blake3.workspace = true
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
rootlight-storage = { path = "../rootlight-storage" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rootlight-adapter-sdk = { path = "../rootlight-adapter-sdk" }
rootlight-adapter-treesitter = { path = "../rootlight-adapter-treesitter" }
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-vfs = { path = "../rootlight-vfs" }
tempfile.workspace = true

[lints]
workspace = true
