[package]
name = "rootlight-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-error = { path = "../rootlight-error" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ipc = { path = "../rootlight-ipc" }
rootlight-observability = { path = "../rootlight-observability" }
rootlight-protocol = { path = "../rootlight-protocol" }
rootlight-runtime = { path = "../rootlight-runtime" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
