[package]
name = "rootlight-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rootlight-error = { path = "../rootlight-error" }
rootlight-ids = { path = "../rootlight-ids" }
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[features]
default = []
schema = ["dep:schemars", "rootlight-ids/schema"]

[lints]
workspace = true
