[package]
name = "rootlight-discovery"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ignore.workspace = true
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-config = { path = "../rootlight-config" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-vfs = { path = "../rootlight-vfs" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
