[package]
name = "rootlight-git"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ids = { path = "../rootlight-ids" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
