[package]
name = "rootlight-ids"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
default = []
schema = ["dep:schemars"]

[dependencies]
blake3.workspace = true
data-encoding.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
