[package]
name = "rootlight-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
interprocess.workspace = true
prost.workspace = true
rootlight-protocol = { path = "../rootlight-protocol" }
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
widestring.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
