[package]
name = "rootlight-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
interprocess.workspace = true
prost.workspace = true
rootlight-protocol = { path = "../rootlight-protocol" }
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
nt-token.workspace = true
widestring.workspace = true
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
