[package]
name = "rootlight-ir"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-ids = { path = "../rootlight-ids" }
schemars = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true

[features]
default = []
schema = ["dep:schemars", "rootlight-ids/schema"]

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
