[package]
name = "rootlight-mcp-contract"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-error = { path = "../rootlight-error" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
