[package]
name = "rootlight-mcp-contract"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
blake3.workspace = true
rootlight-error = { path = "../rootlight-error", features = ["schema"] }
rootlight-ids = { path = "../rootlight-ids", features = ["schema"] }
rootlight-ir = { path = "../rootlight-ir", features = ["schema"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema.workspace = true

[lints]
workspace = true
