[package]
name = "rootlight-operations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-error = { path = "../rootlight-error" }
rootlight-ids = { path = "../rootlight-ids" }
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
