[package]
name = "rootlight-operations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-error = { path = "../rootlight-error" }
rootlight-ids = { path = "../rootlight-ids" }
rusqlite.workspace = true
sha2.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
nt-token.workspace = true
windows.workspace = true
windows-permissions.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
