[package]
name = "rootlight-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
prost.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
prost-types.workspace = true

[lints]
workspace = true
