[package]
name = "rootlight-query"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
rootlight-search = { path = "../rootlight-search" }
rootlight-source = { path = "../rootlight-source" }
rootlight-storage = { path = "../rootlight-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rootlight-vfs = { path = "../rootlight-vfs" }
tempfile.workspace = true

[lints]
workspace = true
