[package]
name = "rootlight-resolve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ids = { path = "../rootlight-ids" }
rootlight-ir = { path = "../rootlight-ir" }
thiserror.workspace = true

[lints]
workspace = true
