[package]
name = "rootlight-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
directories.workspace = true
rootlight-ipc = { path = "../rootlight-ipc" }
rootlight-protocol = { path = "../rootlight-protocol" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
nt-token.workspace = true
windows.workspace = true
windows-permissions.workspace = true

[lints]
workspace = true
