[package]
name = "rootlight-search"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
blake3.workspace = true
cap-fs-ext.workspace = true
cap-std.workspace = true
rootlight-cancel = { path = "../rootlight-cancel" }
rootlight-ids = { path = "../rootlight-ids" }
tantivy.workspace = true
tantivy-fst.workspace = true
thiserror.workspace = true
unicode-casefold.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
